
=== Core classes updates (outstanding ones only)

* Array

  * Array#append  [Feature #12746]
  * Array#prepend  [Feature #12746]

* Integer

  * Integer.sqrt  [Feature #13219]

* IO

  * IO#pread  [Feature #4532]
  * IO#pwrite  [Feature #4532]

* IOError

  * exception message "stream closed" is changed  [Bug #13405]

* Regexp
  * Update Onigmo 6.1.1.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82

* Thread

  * Thread#fetch  [Feature #13009]

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]

=== Stdlib updates (outstanding ones only)

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.

=== Compatibility issues (excluding feature bug fixes)

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].

* BasicSocket#read_nonblock and BasicSocket#write_nonblock no
  longer sets the O_NONBLOCK file description flag as side effect
  [Feature #13362]

=== Stdlib compatibility issues (excluding feature bug fixes)

* mathn.rb
  Removed from stdlib. [Feature #10169]

=== C API updates

=== Supported platform changes

=== Implementation improvements

* (This might not be a "user visible feature change" but) Hash class's
  hash function is now SipHash13. [Feature #13017]

* SecureRandom now prefers OS-provided sources than OpenSSL. [Bug #9569]

=== Miscellaneous changes

* configure option --with-ext now mandates its arguments.  So for
  instance if you run ./configure --with-ext=openssl,+ then the
  openssl library is guaranteed compiled, otherwise the build fails
  abnormally.

  Note however to always add the ",+" at the end of the argument.
  Otherwise nothing but openssl are built.  [Feature #13302]